--- a/index.html
+++ b/index.html
@@ -22,8 +22,18 @@
         <h2>Home Section</h2>
         <p2>Welcome to my portfolio website.</p2>
       <marquee  direction="right"><div class ="container"> <img class ="mad"src ="2.jpg"> </marquee>
-        <p class ="fada"><h1 class="h">Korley Joshua Doku</h1><center> is my name.I'm a frontend and a backend developer, website developer and a game developer.</center></p></div>
+     <b><details>   
+        <p class ="fada"><h1 class="h">
+            <summary>Korley Joshua Doku</summary>
+        </h1><center><p>is my name.I'm a frontend and a backend developer, website developer and a game developer.</p> </center></p></div>
+       </details></b>
+        <br>
+          <p style="color: #fff;"><b>HTML &nbsp;<progress value="40"></progress></b> </p>
+          <p style="color: #fff;"><b>CSS  &nbsp;<progress value="0.25"></progress></b> </p>
+          <p style="color: #fff;"><b>JAVASCRIPT  &nbsp;<progress value="0.25"></progress></b> </p>
     </section>
+
+     
     <section id="document">
         <h2>Document Section</h2>
         <p>View my documents and projects here.</p>
@@ -57,8 +67,9 @@
      <h2>feedback Section</h2>
         <p> Write your comment.</p>
         <input type="text"
-        placeholder="feedback"required>
-     <button type="submit"></button>
+        placeholder="feedback"required><br><br>
+        <button type="submit" style="color: #fff;">submit</button>
+     
     </form>
 </section>
      <section id="logout"><a href="login.html">log out</a></section>
