--- a/login.html
+++ b/login.html
@@ -20,9 +20,9 @@
             <input type="text" placeholder="first name"required> <br> <br>
             <label for="password">Password</label> <br><br>
             <input type="password" placeholder="password"required> <br> <br>
-            <p style="color: indigo;">forgotten password?</p>
-            <a href="index.html"><h2 style="color: #fff;">log in</h2></a><a href="login2.html"><h2 style="color: #fff;">sign up</h2></a>
+            <h5 style="color:#fff;">forgotten password?</h5><a href="login2.html"><h2 style="color: #fff;">sign up</h2></a>
+            <a href="index.html"><h2 style="color: #fff;">login</h2></a>
         </form>
     </div>
-</body>
+</body
 </html>
