--- a/login2.html
+++ b/login2.html
@@ -11,20 +11,26 @@
         <h1 style="color: #fff;text-decoration: underline;">Create Account</h1>
         <form>
             <label for="name">Surname</label> <br>
-            <input type="text" placeholder="Surname"required><br>
+            <input type="text" placeholder="Surname"required><br><br>
             <label for="name">First Name</label> <br>
-            <input type="text" placeholder="First name"required> <br>
+            <input type="text" placeholder="First name"required> <br><br>
             <label for="name">Date Of Birth</label> <br>
-            <input type="datetime-local" placeholder="Date Of Birth"required> <br>
+            <input type="date" placeholder="Date Of Birth"required> <br><br>
             <label for="number">Age</label> <br>
-            <input type="number" placeholder="Age"required><br>
-            <label for="text">Ghana  Card</label> <br>
-            <input type="text" placeholder="Ghana card"required><br>
-            <label for="text">Email or Phne number</label> <br>
-            <input type="text" placeholder="Email or Phone number    "required> <br>
-            <label for="password">Password</label> <br>
-            <input type="password" placeholder="Password"required>
-            <a href="index.html"><h2 style="color: #fff;">log in</h2></a>
+            <input type="number" placeholder="Age"required><br><br>
+            <label for="number">Phone Number</label> <br>
+            <input type="number" placeholder="number"required><br><br>
+            <label for="email">Email</label> <br>
+            <input type="email" placeholder="Email  "required> <br><br>
+           
+               <label for="gender">Gender</label>
+               <br>
+               <input type="radio" name="Gender">Male
+               <input type="radio" name="Gender">Female
+              <br><br>
+              <label for="password">Password</label> <br>
+              <input type="password" placeholder="Password"required> <br><br>
+            <a href="index.html"><h2 style="color: #fff;">login</h2></a>
             
          </form>
 </body>
