--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <h style= "color:indigo; font-family: Verdana, Geneva, Tahoma, sans-serif;"> <marquee direction="right">  Thanks of visiting my portfolio website </marquee></h>
     <footer>
         <div class="move">
-            <h style= "color:indigo; font-family: Verdana, Geneva, Tahoma, sans-serif;"> <marquee direction="right">  Thanks of visiting my portfolio website </marquee></h>
+            <h style= "color:indigo; font-family: Verdana, Geneva, Tahoma, sans-serif;"> <marquee direction="right">  Thanks for visiting my portfolio website </marquee></h>
     </div>
         <p style="color: black;">&copy; 2024 My Portfolio</p>
   
